MDEV-13023 mariabackup does not preserve holes for page compressed tables.

Changed "local" datasink logic to detect page compressed Innodb tables.

Whenever such table is detected, holes in the copied files are created by
skipping over binary zeros at the end of each compressed page.