extra/mariabackup/datasink.c
@@ -108,7 +108,7 @@ Write to a datasink file.
 int
 ds_write(ds_file_t *file, const void *buf, size_t len)
 {
-	return file->datasink->write(file, buf, len);
+	return file->datasink->write(file, (const uchar *)buf, len);
 }
 
 /************************************************************************
